add metod for generate particular tree